# LAVARD

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  QUESTIONS.md  README.md  SECURITY.md  SUBMISSION.md  cli.py  demo.py  index.html  monitor_agent.sh  pyproject.toml  render.yaml  requirements.lock.txt  requirements.txt  skills-lock.json
thehouse/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
thehouse/core/: api.py  config.py  logging_setup.py  models.py  pipeline.py  pricing.py  service.py
thehouse/directory/: desk.py  landing.py  service.py
thehouse/docs/: GO_LIVE.md
thehouse/gateway/: mcp_server.py
thehouse/infra/: docker-compose.yml
thehouse/migrations/: README.md  env.py
thehouse/onchain/: a2a_pay.py  facilitator.py  payments.py  settlement.py  settlement_rail.py  sync.py
thehouse/scripts/: acceptance_run.py  demo_phase1.py  demo_phase6.py  weekly_report.py
thehouse/tests/: conftest.py  sim_asps.py  sim_mcp_server.py  test_a2a_pay_rail.py  test_acceptance.py  test_app_wiring.py  test_audit_fixes.py  test_audit_fixes_2.py  test_audit_fixes_settlement.py  test_audit_pass5_runtime.py  test_composer.py  test_conditional_pricing.py  test_dedup.py  test_deep_audit_fixes.py  test_directory.py  test_economics.py  test_facilitator.py  test_hardening.py  test_injection_isolation.py  test_intake.py  test_lavard_blend.py  test_mode_a_end_to_end.py  test_mode_b.py  test_onchain.py  test_price_sync.py  test_prod_verifier.py  test_profiler.py  test_semantic_dedup.py  test_settlement_poller.py  (+2 more)
(+141 files in other folders)
