[project]
name = "thehouse"
version = "0.1.0"
description = "TheHouse — request aggregation broker for OKX.AI Agent Service Providers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "redis>=5.0",
    "httpx>=0.27",
    "alembic>=1.13",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.30"]
semantic = ["qdrant-client>=1.9", "fastembed>=0.3"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "fakeredis>=2.23",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "directory", "onchain", "gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
